--- a/frontend/src/css/playlist.css
+++ b/frontend/src/css/playlist.css
@@ -100,3 +100,14 @@
   .playlist button[type="submit"]:hover {
     background-color: #2c3e50;
   }
+
+  .playlist button[type="show"] {
+    background-color: #6276c5;
+    color: #fff;
+    border-radius: 5px;
+    border: none;
+    padding: 3px 8px;
+    font-size: 1.2em;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
