--- a/frontend/src/css/playlist.css
+++ b/frontend/src/css/playlist.css
@@ -101,6 +101,14 @@
     background-color: #2c3e50;
   }
 
+  .playlist button[type="show"]:hover {
+    background-color: #47568f;
+  }
+
+  .playlist button[type="delete"]:hover {
+    background-color: #b52626;
+  }
+
   .playlist button[type="show"] {
     background-color: #6276c5;
     color: #fff;
@@ -114,7 +122,7 @@
   }
 
   .playlist button[type="delete"] {
-    background-color: #6276c5;
+    background-color: #e33131;
     color: #fff;
     border-radius: 5px;
     border: none;
