--- a/frontend/src/css/Follow.css
+++ b/frontend/src/css/Follow.css
@@ -15,8 +15,36 @@
     width: 50%;
     margin-top: 20px;
     padding: 10px;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     border-radius: 5px;
+  }
+
+  .search-container h4 {
+    margin-bottom: 10px;
+  }
+  
+  .search-container Form {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+
+  }
+  
+  .follow-container label {
+    margin-bottom: 5px;
+  }
+  
+  .follow-container Input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+  }
+  
+  .follow-container Input:focus {
+    outline: none;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
   }
 
 .follow-container button {
@@ -43,7 +71,7 @@
     margin-top: 20px;
   }
 
-  .follower {
+.follower {
     display: flex;
     justify-content: space-between;
     align-items: center;
